--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -33,13 +33,14 @@ current_scene="res://node_2d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
-size=Vector2i(1920, 971)
-position=Vector2i(971, 25)
+size=Vector2i(1920, 973)
+position=Vector2i(0, 25)
 
 [ScriptEditor]
 
