--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
+mode="maximized"
 size=Vector2i(1920, 973)
 position=Vector2i(0, 25)
 
