--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -15,14 +15,14 @@ dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
-dock_closed=[]
+dock_closed=["Scene"]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
-dock_3="Scene,Import"
+dock_3="Import,Scene"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
