--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -9,13 +9,13 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://woden.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
-dock_closed=["Scene", "Import", "FileSystem"]
+dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
@@ -24,30 +24,29 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_split_1=0
-dock_5="Inspector,Node,History"
 dock_3="Scene,Import"
-dock_1="FileSystem"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://credits.tscn", "res://fase1.tscn", "res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray("res://credits.tscn", "res://fase1.tscn", "res://node_2d.tscn", "res://cenas/player.tscn")
+current_scene="res://fase1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
-size=Vector2i(1920, 969)
-position=Vector2i(0, 25)
+mode="fullscreen"
+size=Vector2i(1526, 969)
+position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://menu.gd", "res://woden.gd"]
+selected_script="res://woden.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
