--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://woden.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Background layers/Layer_0011_0.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/Background layers/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,11 +30,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://credits.tscn", "res://fase1.tscn", "res://node_2d.tscn", "res://cenas/player.tscn")
-current_scene="res://fase1.tscn"
+open_scenes=PackedStringArray("res://cenas/credits.tscn", "res://cenas/fase1.tscn", "res://cenas/node_2d.tscn", "res://cenas/player.tscn")
+current_scene="res://cenas/fase1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -45,8 +46,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://menu.gd", "res://woden.gd"]
-selected_script="res://woden.gd"
+open_scripts=["res://script/menu.gd", "res://script/woden.gd"]
+selected_script="res://script/woden.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
