--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/script_editor_cache.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://menu.gd]
+[res://script/menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -12,15 +12,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://woden.gd]
+[res://script/woden.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
