--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://cenas/credits.tscn", "res://cenas/fase1.tscn", "res://cenas/node_2d.tscn", "res://cenas/player.tscn")
-current_scene="res://cenas/fase1.tscn"
+open_scenes=PackedStringArray("res://cenas/credits.tscn", "res://cenas/fase1.tscn", "res://cenas/Menu.tscn", "res://cenas/player.tscn")
+current_scene="res://cenas/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -47,7 +47,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://script/menu.gd", "res://script/woden.gd"]
-selected_script="res://script/woden.gd"
+selected_script="res://script/menu.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
