--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://cenas/credits.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://cenas/player.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/Personagem/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://cenas/player.tscn", "res://cenas/Menu.tscn", "res://cenas/fase1.tscn", "res://cenas/credits.tscn")
-current_scene="res://cenas/credits.tscn"
+open_scenes=PackedStringArray("res://cenas/player.tscn", "res://cenas/Menu.tscn", "res://cenas/fase1.tscn", "res://cenas/credits.tscn", "res://cenas/tentaculo.tscn")
+current_scene="res://cenas/tentaculo.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -40,8 +40,8 @@ selected_main_editor_idx=0
 
 screen=0
 mode="windowed"
-size=Vector2i(1526, 969)
-position=Vector2i(126, 25)
+size=Vector2i(1667, 973)
+position=Vector2i(0, 25)
 
 [ScriptEditor]
 
