--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://cenas/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/Personagem/")
+dock_filesystem_selected_paths=PackedStringArray("res://inimigo 1 (ten.)/tensmall.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://inimigo 1 (ten.)/", "res://cenas/", "res://assets/", "res://assets/Personagem/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://cenas/player.tscn", "res://cenas/Menu.tscn", "res://cenas/fase1.tscn", "res://cenas/credits.tscn", "res://cenas/tentaculo.tscn")
-current_scene="res://cenas/tentaculo.tscn"
+open_scenes=PackedStringArray("res://cenas/player.tscn", "res://cenas/Menu.tscn", "res://cenas/fase1.tscn", "res://cenas/credits.tscn", "res://cenas/tentaculo.tscn", "res://pause.tscn")
+current_scene="res://cenas/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -39,14 +39,14 @@ selected_main_editor_idx=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-size=Vector2i(1667, 973)
-position=Vector2i(0, 25)
+mode="fullscreen"
+size=Vector2i(1667, 969)
+position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://script/menu.gd", "res://script/woden.gd"]
-selected_script="res://script/woden.gd"
+open_scripts=["res://script/menu.gd", "res://Pause.gd", "res://script/woden.gd"]
+selected_script="res://Pause.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
