--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/quick_open_dialog_cache.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://crnxk5p37c68h")
+PackedScene=PackedStringArray("uid://iv5kaquswo1r", "uid://cigwgpml0vet3", "uid://crnxk5p37c68h")
