--- a/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/script_editor_cache.cfg
+++ b/wishes-of-the-soul--a-ira-dos-deuses/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 31,
-"scroll_position": 15.0,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Pause.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
